fix single-node owner pipeline and validate ZGC